# cpp-app-template

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  main.cc
